continuing charting... added a Null Box

--- a/README.org
+++ b/README.org
@@ -1551,11 +1551,13 @@ set_trace_func proc { |event, file, line, id, binding, classname|
     as boxes linking to each other to represent their relative 
     positions to each other. As such:
 
-    |               | Title        F-1 |                |            |
-    |               | Top Ruler     -2 |                |            |
-    | Left Ruler -2 | Graph        F-3 | Right Ruler -2 | Legend F-1 |
-    |               | Bottom Ruler  -2 |                |            |
-    |               | Caption      F-1 |                |            |
+    |             |               | Null Box      -0 |                |            |             |
+    |             |               | Title        F-1 |                |            |             |
+    |             |               | Top Ruler     -2 |                |            |             |
+    | Null Box -0 | Left Ruler -2 | Graph        F-3 | Right Ruler -2 | Legend F-1 | Null Box -0 |
+    |             |               | Bottom Ruler  -2 |                |            |             |
+    |             |               | Caption      F-1 |                |            |             |
+    |             |               | Null Box      -0 |                |            |             |
 
     And so, given the initial width and height of the
     canvas, we work to determine everything else. For
@@ -1578,3 +1580,7 @@ set_trace_func proc { |event, file, line, id, binding, classname|
     Others, like the title and caption and legend boxes,
     are floating.
 
+    We have come up with the splendid idea of creating
+    the "NullBox" -- basically the equivalent of having
+    zero or the empty set. It will simplify the layout
+    algorithm
