--- a/README.org
+++ b/README.org
@@ -1619,7 +1619,7 @@ set_trace_func proc { |event, file, line, id, binding, classname|
 **** JUNKYARD Debug layout dump
      #+begin_src
 -->PureText unresolved: comparison of NilClass with 20 failed
--->Graph: unresolved: undefined method `-@' for nil:NilClass
+-->Graph: unresolved: undefined method `-' for nil:NilClass
                                               left dom=0 xywh=[0,0,0,300]       LRTB=[0,0,0,0]
                                              right dom=0 xywh=[400,0,0,300]     LRTB=[0,0,0,0]
                                                top dom=0 xywh=[0,0,400,0]       LRTB=[0,0,0,0]
@@ -1628,16 +1628,16 @@ set_trace_func proc { |event, file, line, id, binding, classname|
         Fox::Enhancement::Xtras::Charting::Caption dom=1 xywh=[190,290,20,10]   LRTB=[0,0,0,0]      floater
          Fox::Enhancement::Xtras::Charting::Legend dom=1 xywh=[350,135,50,30]   LRTB=[0,0,0,0]      floater
 
-       Fox::Enhancement::Xtras::Charting::TopRuler dom=2 xywh=[NIL,10,NIL,10]   LRTB=[0,0,0,0]
-    Fox::Enhancement::Xtras::Charting::BottomRuler dom=2 xywh=[NIL,280,NIL,10]  LRTB=[0,0,0,0]
+       Fox::Enhancement::Xtras::Charting::TopRuler dom=2 xywh=[NIL,10,20,10]    LRTB=[0,0,0,0]
+    Fox::Enhancement::Xtras::Charting::BottomRuler dom=2 xywh=[NIL,280,20,10]   LRTB=[0,0,0,0]
       Fox::Enhancement::Xtras::Charting::LeftRuler dom=2 xywh=[0,NIL,20,10]     LRTB=[0,0,0,0]
      Fox::Enhancement::Xtras::Charting::RightRuler dom=2 xywh=[330,NIL,20,10]   LRTB=[0,0,0,0]
 
-          Fox::Enhancement::Xtras::Charting::Graph dom=3 xywh=[0,0,330,280]     LRTB=[0,0,0,0]
-          Fox::Enhancement::Xtras::Charting::Graph dom=3 xywh=[0,0,330,280]     LRTB=[0,0,0,0]
+          Fox::Enhancement::Xtras::Charting::Graph dom=3 xywh=[-20,0,350,280]   LRTB=[0,0,0,0]
+          Fox::Enhancement::Xtras::Charting::Graph dom=3 xywh=[-20,0,350,280]   LRTB=[0,0,0,0]
 
-       Fox::Enhancement::Xtras::Charting::TopRuler dom=2 xywh=[0,10,330,10]     LRTB=[0,0,0,0]
-    Fox::Enhancement::Xtras::Charting::BottomRuler dom=2 xywh=[0,280,330,10]    LRTB=[0,0,0,0]
+       Fox::Enhancement::Xtras::Charting::TopRuler dom=2 xywh=[-20,10,350,10]   LRTB=[0,0,0,0]
+    Fox::Enhancement::Xtras::Charting::BottomRuler dom=2 xywh=[-20,280,350,10]  LRTB=[0,0,0,0]
       Fox::Enhancement::Xtras::Charting::LeftRuler dom=2 xywh=[0,0,20,280]      LRTB=[0,0,0,0]
      Fox::Enhancement::Xtras::Charting::RightRuler dom=2 xywh=[330,0,20,280]    LRTB=[0,0,0,0]
 
