--- a/README.org
+++ b/README.org
@@ -742,8 +742,8 @@
     For convience, when dealing with colors in the device context or any
     other situation, we provide you with a nice set of predefined colors.
     
-    | @@html:<b>@@bold text in a table@@html:</b>@@                 |   |
-    | @@html:<div style="background_color: red">Color Testing</div> |   |
+    | @@html:<b>@@bold text in a table@@html:</b>@@                   |   |
+    | @@html:<div style="background_color: red">Color Testing</div>@@ |   |
 
 *** Examples
     Because this is a spinoff project of the ongoing RubyNEAT
