--- a/README.org
+++ b/README.org
@@ -743,7 +743,7 @@
     other situation, we provide you with a nice set of predefined colors.
     
     | @@html:<b>@@bold text in a table@@html:</b>@@                           |   |
-    | @@html:<b style="color:red">@@Color Testing@@html:</b>@@                |   |
+    | @@html:<b style="background-color:red">@@Color Testing@@html:</b>@@     |   |
 
 *** Examples
     Because this is a spinoff project of the ongoing RubyNEAT
