--- a/README.org
+++ b/README.org
@@ -741,7 +741,7 @@
 *** Color Directives
     For convience, when dealing with colors in the device context or any
     other situation, we provide you with a nice set of predefined colors.
-    [[./examples/images/color_chart.rb]]
+    [[./examples/images/color_chart.png]]
     
     A code snippet example for using the color directives:
     #+begin_src ruby
