--- a/README.org
+++ b/README.org
@@ -108,15 +108,19 @@
    [[https://www.paypal.com/cgi-bin/webscr?cmd=_donations&business=4AZLVF9WH9J3C&lc=US&item_name=FXRuby%20Enhancement&item_number=enhancement&currency_code=EUR&bn=PP%2dDonationsBF%3abtn_donateCC_LG%2egif%3aNonHosted][Donations are appreciated.]]
 
 ** Installation
-   Requirements: You must have Fox16 installed on your system. Depending on your operating system, the details will vary. And currently on MacOSX you will also need to install X-Windows. Here, we link you to the details provided by FXRuby for your particular environment:
+   Requirements: You must have Fox16 installed on your system. 
+   Depending on your operating system, the details will vary. 
+   And currently on MacOSX you will also need to install
+   X-Windows. Here, we link you to the details provided by
+   FXRuby for your particular environment:
 
    OS	Details
    | Linux	 | https://github.com/lylejohnson/fxruby/wiki/Setting-Up-a-Linux-Build-Environment          |
    | Mac OSX | https://github.com/lylejohnson/fxruby/wiki/Setting-Up-a-Mac-OS-X-Development-Environment |
    | Windows | https://github.com/lylejohnson/fxruby/wiki/Setting-Up-a-Windows-Build-Environment        |
 
-   For Macs, you will also have to install X-Windows. For information on how to do that,
-   https://www.xquartz.org/.
+   For Mac OS X, you will also have to install X-Windows.
+   For information on how to do that, https://www.xquartz.org/.
 
    To install the Enhancement gem from commandline:
 
